@@ -1,3 +1,10 @@
+2012-06-19  Kai Tietz  <ktietz@redhat.com>
+
+	* math.h (__fpclassify, __fpclassifyf): Special case x64.
+	(__mingw_dbl_type_t): New type.
+	(__mingw_ldbl_type_t): New type.
+	(__mingw_flt_type_t): New type.
+
 2012-06-15  Kai Tietz  <ktietz@redhat.com>
 
 	* assert.h, process.h, stdlib.h (_exit,_cexit, _c_exit):
